@@ -1,3 +1,9 @@
+2006-10-15  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (dfsch_eval_proc_impl): Added thread specific data 
+	caching (I expect some performance gain from this, because
+	get_thread_info() is (should be) slow)
+
 2006-10-12  Ales Hakl  <ales at hakl dot net>
 
 	* src/repl.c (main): VERSION -> PACKAGE_VERSION (some versions of 
